[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/policy_game/ship_blank.png" type="Texture" id=1]
[ext_resource path="res://scripts/policy_game/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/policy_game/explosion2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/policy_game/explosion3.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/policy_game/explosion1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/policy_game/ship_green.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/policy_game/ship_red.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/policy_game/ship_black.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/policy_game/alpha.png" type="Texture" id=9]
[ext_resource path="res://scenes/mini_games/policy/CannonBall.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sounds/policy_game/cannonball.wav" type="AudioStream" id=11]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "black",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "green",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "red",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": false,
"name": "explosion",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "blank",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57, 19.9112 )

[node name="Enemy" type="Area2D"]
rotation = 3.14159
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )
CannonBall = ExtResource( 10 )

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "blank"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="SearchArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SearchArea"]
position = Vector2( 144, 0.000335693 )
rotation = 1.5708
polygon = PoolVector2Array( 0.000185586, 144, 124, -180, 99.9998, -220, 67.9998, -252, 31.9997, -268, -16.0003, -272, -60.0003, -260, -100, -224, -124, -180 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.01735, -0.159511 )
scale = Vector2( 6.59161, 1.97307 )

[node name="Cannon" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="FoV" type="Polygon2D" parent="."]
show_behind_parent = true
color = Color( 0.00392157, 0.721569, 1, 0.254902 )
antialiased = true
polygon = PoolVector2Array( 0, 0, 322.754, 122.194, 343.758, 113.874, 360, 104.001, 374.435, 92.1213, 386.147, 79.8508, 396.745, 65.907, 406.09, 48.2838, 412.92, 25.7489, 416, 0.00105464, 413.317, -23.9853, 406.668, -46.5333, 398.418, -64.6069, 385.59, -81.3395, 374.435, -93.0523, 360, -103.999, 343.201, -114.247, 321.627, -123.234 )
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="CannonTimer" to="." method="_on_CannonTimer_timeout"]
[connection signal="body_entered" from="SearchArea" to="." method="_on_SearchArea_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
